<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/start"
    tools:context=".Logo_act">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="239dp">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="172dp"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/start_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo_text_zone"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/startWithPhone"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_join"
            android:fontFamily="@font/nanum_square_regular"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/start_with_phone"
            android:textColor="@color/start"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/startWithKakao"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/kakao" />

        <ImageView
            android:id="@+id/startWithNaver"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/naver" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/logo_text_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/nanum_square_regular"
            android:text="@string/visit_first"
            android:textColor="#121212"
            android:textSize="12sp" />

        <Button
            android:gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/start_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_bold"
            android:text="@string/visit_first_login"
            android:textColor="@color/start_with_phone_color"
            android:textSize="13sp" />


    </LinearLayout>


</RelativeLayout>